--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Manu De Buck</title>
+
+    <!-- jQuery JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<h1>Spelbord</h1>
+<div id="spelbord"></div>
 
+<script src="javascript/board.js"></script>
+<script>
+
+</script>
 </body>
 </html>
