Added list of css colors + random sampling Created basics of js file

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 
 <script src="javascript/board.js"></script>
 <script>
-
+    const spelbord = new Spelbord({
+        grootte : 5,
+        selector: '#spelbord'
+    });
 </script>
 </body>
 </html>
