Started js + pull script on webserver

--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<h1>Spelbord</h1>
+<h1>Spelbordje</h1>
 <div id="spelbord"></div>
 
 <script src="javascript/board.js"></script>
 <script>
+
     const spelbord = new Spelbord({
         grootte : 5,
         selector: '#spelbord'
     });
+
 </script>
 </body>
 </html>
