--- a/index.html
+++ b/index.html
@@ -7,14 +7,44 @@
     <!-- jQuery JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
     <!-- Stylesheet -->
     <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
-<div class="teller" id="teller"></div>
-<div class="spelbord" id="spelbord"></div>
-<select id="opties" size="10"></select>
+
+<div class="container panel panel-default">
+    <div class="panel-heading">
+        <h2 class="title">Colored dots - Manu De Buck</h2>
+    </div>
+    <div class="panel-body">
+        <div class="row">
+            <div class="col-xs-2 col-s-12">
+                <h1><span class="label label-default" id="teller"></span></h1>
+                <select class="optie col-xs-12" id="opties"></select>
+            </div>
+            <div class="spelbord col-xs-10 col-centered" id="spelbord"></div>
+            <div class="col-xs-12">
+                <div class="input-group">
+                    <input type="text" class="form-control amount" placeholder="Choose amount of rows / columns..." value="5">
+                    <span class="input-group-btn">
+                <button class="btn btn-default btn-go" type="button">Play</button>
+                </span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="javascript/board.js"></script>
 <script>
 
@@ -23,6 +53,10 @@
         bordselector: '#spelbord',
         kleurselector: '#opties',
         tellerselector: '#teller'
+    });
+
+    $(".btn-go").click(() => {
+        spelbord.setGrootte($(".amount").val());
     });
 
 </script>
