Some fixes + css adaption

--- a/index.html
+++ b/index.html
@@ -42,18 +42,20 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-2 col-xs-12">
-            <h1><span class="label label-default" id="teller"></span></h1>
-            <select class="optie" id="opties"></select>
+        <div class="col-md-3 col-xs-12">
             <div class="input-group">
                 <input type="text" class="form-control" id="amount" placeholder="Choose amount of rows / columns..." value="5">
                 <span class="input-group-btn">
                     <button class="btn btn-default btn-go" type="button">Play</button>
                 </span>
             </div>
+            <h1><span class="label-block label-default" id="teller"></span></h1>
+            <select class="optie" id="opties"></select>
         </div>
-        <div class="col-md-10 col-xs-12">
+        <div class="col-md-9 col-xs-12">
             <div id="spelbord"></div>
+        </div>
+
     </div>
 </div>
 
