--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 </head>
 <body>
-<div class="modal" tabindex="-1" role="dialog" id="uitgespeeld">
+<div class="modal" tabindex="-1" role="dialog" id="dialoogvenster">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -31,7 +31,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <p id="uitgespeeldtekst"></p>
+                <p id="dialoogvensterTekst"></p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">OK</button>
