--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Manu De Buck</title>
+    <title>Painted dots</title>
 
     <!-- jQuery JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -21,14 +21,12 @@
 
 </head>
 <body>
+
 <div class="modal" tabindex="-1" role="dialog" id="dialoogvenster">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="dialoogvensterTitel"></h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
             </div>
             <div class="modal-body">
                 <p id="dialoogvensterTekst"></p>
@@ -50,12 +48,11 @@
                 </span>
             </div>
             <h1><span class="label-block label-default" id="teller"></span></h1>
-            <select class="optie" id="opties"></select>
+            <div class="optie" id="opties" data-geselecteerd=""></div>
         </div>
         <div class="col-md-9 col-xs-12" >
             <div id="spelbord"></div>
         </div>
-
     </div>
 </div>
 
@@ -69,7 +66,7 @@
         tellerselector: '#teller',
         spelbordgrootte: 650,
         optiegrootte: 600,
-        mingrootte: 2,
+        mingrootte: 3,
         maxgrootte: 25,
     });
 
